2015-11-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview,ftstring] Default to gamma = 1.8.

	* src/ftview.c (status): Updated.
	* src/ftstring.c (status, main): Updated.

2015-10-16  Werner Lemberg  <wl@gnu.org>

	Don't use `aux' as a file name.

	This should be avoided under Windows.
	Problem reported by Dave Arnold <darnold@adobe.com>.

	* src/aux.c, src/aux.h: Renamed to...
	* src/output.c, src/output.h: ... these file names.

	* Makefile, src/ftdump.c, src/ftgrid.c: Updated.

2015-10-04  Werner Lemberg  <wl@gnu.org>

	* Version 2.6.1 released.
	=========================


	Tag sources with `VER-2-6-1'.

	* README: Updated.
	* src/*.1: Updated.

2015-09-13  Werner Lemberg  <wl@gnu.org>

	* Makefile (FT_H): Updated to recent directory changes (#45954).

	The patch is taken from the anonymous Savannah bug report.

2015-08-13  Werner Lemberg  <wl@gnu.org>

	[ftcommon] Support named instances of GX variation fonts.

	* src/ftcommon.c (FTDemo_Install_Font): Add inner loop for named
	instances.

2015-08-05  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Avoid invalid left-shift of negative values.

	* src/ftgrid.c (grid_status_draw_outline): Don't use left-shift but
	multiplication.

2015-08-04  Werner Lemberg  <wl@gnu.org>

	* src/ftmulti.c (main): Fix double-free in case of invalid font.

2015-07-08  Werner Lemberg  <wl@gnu.org>

	[ftcommon] Improve loading of font collections.

	* src/ftcommon.c (FTDemo_Install_Font): Don't exit if first face of
	a font is invalid.
	Don't exit if we want outline fonts only and the first face isn't.
	Don't exit if there are problems with the cmap.

	In all three cases, simply skip the font face.

2015-06-07  Werner Lemberg  <wl@gnu.org>

	* Version 2.6 released.
	=======================


	Tag sources with `VER-2-6'.

	* README: Updated.
	* src/*.1: Updated.

	* Makefile: Omit a zero patch level in computation of `version'.

2015-06-06  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Key `D' now toggles display of point numbers.
